fix: fix video details not overflowing correctly

--- a/public/styles.css
+++ b/public/styles.css
@@ -104,6 +104,7 @@ ul li {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .title {
@@ -112,6 +113,7 @@ ul li {
   font-weight: 600;
   margin: 5px;
   white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
